@@ -2,6 +2,7 @@
 v4.2.0-git
 ----------
 
+[jan] Export composite attributes to vCard too.
 
 
 ------------
